Implement base logic

--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
 <div id="gameplace"></div>
 
 <script type="text/javascript" src="js/input.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/game.js"></script>
+<script type="text/javascript" src="js/entity.js"></script>
+<script type="text/javascript" src="js/player.js"></script>
+<script type="text/javascript" src="js/plenty.js"></script>
+<script type="text/javascript" src="js/enemy.js"></script>
+<script type="text/javascript" src="js/bullet.js"></script>
+<script>
+
+    var game = new Game();
+    game.init();
+
+</script>
 
 </body>
 </html>
