fix(Game) Move methods to classes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <script type="text/javascript" src="js/bullet.js"></script>
 <script>
 
-    var game = new Game();
+    var game = new Game(0);
     game.init();
 
 </script>
